scripts/nullness/annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8.txt
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:42: error: [dereference.of.nullable] dereference of possibly-null reference conn
            conn.StopReceiveThread();
            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:52: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:62: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnectionManager.java:74: error: [dereference.of.nullable] dereference of possibly-null reference conn
        return conn.Receive(0 /*no blocking*/ );
               ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:108: error: [dereference.of.nullable] dereference of possibly-null reference m_recvSocket
                    m_recvSocket.receive(recvPacket);
                    ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:271: error: [argument] incompatible argument for parameter address of DatagramPacket constructor.
                this.m_peerAddress, 
                    ^
  found   : @Initialized @Nullable InetAddress
  required: @Initialized @NonNull InetAddress
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:289: error: [dereference.of.nullable] dereference of possibly-null reference m_recvSocket
            m_recvSocket.close();
            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:290: error: [dereference.of.nullable] dereference of possibly-null reference m_receiverThread
            m_receiverThread.interrupt(); 
            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:293: error: [dereference.of.nullable] dereference of possibly-null reference m_receiverThread
                m_receiverThread.join(1000);
                ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/UdpConnector.java:311: error: [dereference.of.nullable] dereference of possibly-null reference m_receiverThread
            m_receiverThread.start();
            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/DtcpPacket.java:128: error: [method.invocation] call to getPayloadFromBytes(byte[]) not allowed on the given receiver.
		this.payload = this.getPayloadFromBytes(bytes);
		                                       ^
  found   : @UnderInitialization(UDPConnector.DtcpPacket.class) @NonNull DtcpPacket
  required: @Initialized @NonNull DtcpPacket
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:119: error: [argument] incompatible argument for parameter sendBuffer of ConnectorInterface.Send.
                    m_connectionToShape.Send(m_bufferToSend);
                                             ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/ConnectionShaper.java:121: error: [argument] incompatible argument for parameter sendString of ConnectorInterface.Send.
                    m_connectionToShape.Send(m_stringToSend);
                                             ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:55: error: [dereference.of.nullable] dereference of possibly-null reference conn
            conn.StopReceiveThread();
            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:65: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:76: error: [dereference.of.nullable] dereference of possibly-null reference conn
            return conn.Send(data);
                   ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnectorManager.java:88: error: [dereference.of.nullable] dereference of possibly-null reference conn
        return conn.Receive(maxBlockTimeInMs /*no blocking*/ );
               ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:147: error: [argument] incompatible argument for parameter bytes of String constructor.
                    + " Buffer="+new String(packetToSend.getPayload())+".\n");
                                                                   ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:228: error: [method.invocation] call to StartReceiveThread() not allowed on the given receiver.
        StartReceiveThread();
                          ^
  found   : @UnderInitialization(UDPConnector.EfcpConnector.class) @NonNull EfcpConnector
  required: @Initialized @NonNull EfcpConnector
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:264: error: [dereference.of.nullable] dereference of possibly-null reference m_selfCancelHandle
                m_selfCancelHandle.cancel(false);
                ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:306: error: [argument] incompatible argument for parameter arg0 of List.add.
                                m_receiverPacketsReady.add(packet.getPayload());
                                                                            ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:316: error: [argument] incompatible argument for parameter arg0 of List.add.
                                            m_receiverPacketsOutOfOrder.get(m_receiverNextPacketToDeliver));
                                                                           ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:333: error: [argument] incompatible argument for parameter bytes of String constructor.
                            System.out.print("Received duplicate packet "+packet.getSeqNum()+":"+new String(packet.getPayload())+"\n");
                                                                                                                             ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:341: error: [argument] incompatible argument for parameter arg1 of Map.put.
                                m_receiverPacketsOutOfOrder.put(packet.getSeqNum(), packet.getPayload());
                                                                                                     ^
  found   : @Initialized @NonNull byte @Initialized @Nullable []
  required: @Initialized @NonNull byte @Initialized @NonNull []
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:428: error: [dereference.of.nullable] dereference of possibly-null reference task
                task.cancel(false);
                ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:452: error: [dereference.of.nullable] dereference of possibly-null reference m_senderClosedWindowQueue.peek()
                    m_senderRightWindowEdge > m_senderClosedWindowQueue.peek().getSeqNum() &&
                                                                            ^
../annotator/urlbc3e98d97e_jmhorjus_EFCP_Implementation_tgz-pJ8-UDPConnector_UdpConnectorTestJ8/src/UDPConnector/EfcpConnector.java:506: error: [dereference.of.nullable] dereference of possibly-null reference m_senderClosedWindowQueue.peek()
                    m_senderRightWindowEdge > m_senderClosedWindowQueue.peek().getSeqNum() &&
                                                                            ^
27 errors
